--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,21 +8,5 @@
     }
   },
   "function": {},
-  "api": {
-    "fitzillaawsAPI": {
-      "service": "AppSync",
-      "providerPlugin": "awscloudformation",
-      "output": {
-        "authConfig": {
-          "defaultAuthentication": {
-            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-            "userPoolConfig": {
-              "userPoolId": "authfitzillaaws8c5136b4"
-            }
-          },
-          "additionalAuthenticationProviders": []
-        }
-      }
-    }
-  }
+  "api": {}
 }
