--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,5 +8,21 @@
     }
   },
   "function": {},
-  "api": {}
+  "api": {
+    "fitzillaAwsApi": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authfitzillaaws8c5136b4"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
+  }
 }
